May 22, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/pulseaudio.c: Use Native Endian instead of Little Endian.

May 21, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/oss.c: Readded OSS, PulseAudio, ALSA & NULL backends.
 * plugins/dfsound/pulseaudio.c: Likewise.
 * plugins/dfsound/nullsnd.c: Likewise.
 * plugins/dfsound/alsa.c: Likewise.
 * plugins/dfsound/spu.c: Likewise.
 * configure.ac: Added an option --enable-sound to specify the sound backend.
 * plugins/dfsound/Makefile.am: Likewise.
 * po/pt_BR.po, po/it.po, po/zh_TW.po, po/ru_RU.po, po/pcsx.pot, po/zh_CN.po:
   Updated.
 * libpcsxcore/psxbios.c: Implemented several HLE BIOS functions inside the
   core instead of calling the standard C functions. (Not done yet)
 * plugins/dfsound/sdl.c: Changed buffer size.
 * libpcsxcore/psxinterpreter.c: Revert the previous revert (why the problem
   on amd64 disappeared?).
 * libpcsxcore/ppc/pR3000A.c: Likewise.
 * libpcsxcore/cdrom.c: Likewise.
 * libpcsxcore/ix86_64/iR3000A-64.c: Likewise.
 * libpcsxcore/ix86/iR3000A.c: Likewise.
 * libpcsxcore/sio.c: Likewise.
 * libpcsxcore/psxdma.c: Likewise.
 * libpcsxcore/psxcounters.c: Likewise.
 * libpcsxcore/mdec.c: Likewise, and fixed the cycle value in mdec1Interrupt().

May 20, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * macosx/main.m: Removed obsolete code, added const to function definations.
 * libpcsxcore/plugins.c: Added brackets around the use of CheckErr().
 * libpcsxcore/psxcommon.h: Added brackets around gzfreeze().
 * plugins/dfinput/Makefile.am: Use $(SDL_CFLAGS) and $(SDL_LIBS).
 * plugins/dfsound/Makefile.am: Likewise.
 * libpcsxcore/psxmem.c: Map 1fc00000-1fc7ffff and 9fc00000-9fc7ffff to BIOS
   as well.

May 19, 2010 Wei Mingzhi <whistler_wmz@users.sf.net>

 * plugins/dfsound/sdl.c: Use SDL for Sound Plugin.
 * plugins/dfsound/oss.c: Removed OSS, PulseAudio, ALSA & NULL sound code. If
   these are ever needed in the future we still have the thing called version