@@ -20,7 +20,7 @@ df Copyright:	(c) 2005 Ryan Schultz
 		(c) 2006 Marcus Comstedt
 
 PCSX-Reloaded Authors/Contributors: avlex (Help on xcode project)
-			    dario86 (Various bugfixes)
+			    Dario (Various bugfixes)
 			    edgbla (Root counters, various core/plugin fixes)
 			    Firnis (GTE code from PCSX-Revolution Project)
 			    Gabriele Gorla (MDEC decoder)
