@@ -59,12 +59,12 @@ void CreateMcd(char *mcd);
 void ConvertMcd(char *mcd, char *data);
 
 typedef struct {
-	char Title[48];
-	short sTitle[48];
-	char ID[14];
-	char Name[16];
+	char Title[48 + 1]; // Title in ASCII
+	char sTitle[48 * 2 + 1]; // Title in Shift-JIS
+	char ID[12 + 1];
+	char Name[16 + 1];
 	int IconCount;
-	short Icon[16*16*3];
+	short Icon[16 * 16 * 3];
 	unsigned char Flags;
 } McdBlock;
 
